Fix spacing

--- a/css/project.css
+++ b/css/project.css
@@ -21,6 +21,8 @@ body {
         height: 400%;
         width: 100vw;
         flex-direction: column;
+        margin: 0;
+        border: 0;
     }
 }
 
